--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.10.0",
-    "@parvineyvazov/json-translator": "^3.2.2",
+    "@parvineyvazov/json-translator": "^0.6.2",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.1",
     "bcrypt": "^5.1.1",
@@ -29,7 +29,7 @@
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.5",
-    "next": "15.1.3",
+    "next": "^15.5.2",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^3.26.5",
     "react": "^19.0.0",
