--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,4 @@ package-lock.json
 package.json
 
 images_gemuese_script.py
-src/app/(main)/images/scripts/images_fruits_script.py
+images_fruits_script.py
