--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^0.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "eslint": "^10.0.1",
+    "eslint-config-next": "^0.2.4",
     "postcss": "^8",
     "prisma": "^6.19.0",
     "tailwindcss": "^3.4.1",
